--- a/SofaKernel/SofaFramework/SofaFrameworkConfig.cmake.in
+++ b/SofaKernel/SofaFramework/SofaFrameworkConfig.cmake.in
@@ -33,7 +33,7 @@ if(SOFA_HAVE_GLEW)
 endif()
 
 if(SOFA_HAVE_BOOST)
-    find_package(Boost QUIET REQUIRED COMPONENTS system filesystem locale program_options OPTIONAL_COMPONENTS date_time thread)
+    find_package(Boost QUIET REQUIRED COMPONENTS system filesystem locale program_options OPTIONAL_COMPONENTS date_time thread chrono atomic)
     
     if(Boost_SYSTEM_FOUND AND Boost_FILESYSTEM_FOUND AND Boost_LOCALE_FOUND AND Boost_PROGRAM_OPTIONS_FOUND)
         sofa_create_target(BoostSystem SofaFramework "${Boost_SYSTEM_LIBRARY}" "${Boost_INCLUDE_DIRS}")
@@ -49,10 +49,18 @@ if(SOFA_HAVE_BOOST)
     if(Boost_THREAD_FOUND)
         sofa_create_target(BoostThread SofaFramework "${Boost_THREAD_LIBRARY}" "${Boost_INCLUDE_DIRS}")
     endif()
+
+    if(Boost_CHRONO_FOUND)
+        sofa_create_target(BoostChrono SofaFramework "${Boost_CHRONO_LIBRARY}" "${Boost_INCLUDE_DIRS}")
+    endif()
+
+    if(Boost_ATOMIC_FOUND)
+        sofa_create_target(BoostAtomic SofaFramework "${Boost_ATOMIC_LIBRARY}" "${Boost_INCLUDE_DIRS}")
+    endif()
 endif()
 
 if(NOT TARGET SofaCore)
-	include("${CMAKE_CURRENT_LIST_DIR}/SofaFrameworkTargets.cmake")
+    include("${CMAKE_CURRENT_LIST_DIR}/SofaFrameworkTargets.cmake")
 endif()
 
 check_required_components(SofaHelper SofaDefaultType SofaCore)
