--- a/modules/SofaGeneralLinearSolver/CMakeLists.txt
+++ b/modules/SofaGeneralLinearSolver/CMakeLists.txt
@@ -29,4 +29,10 @@ target_link_libraries(${PROJECT_NAME} PUBLIC SofaSimulationCommon SofaBaseLinear
 set_target_properties(${PROJECT_NAME} PROPERTIES COMPILE_FLAGS "-DSOFA_BUILD_GENERAL_LINEAR_SOLVER")
 set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER "${HEADER_FILES}")
 
+if ("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
+    sofa_generate_pkgconfig_file(SOFA_LIBRARY_NAME ${PROJECT_NAME} SOFA_LIBRARY_DESCRIPTION "The ${PROJECT_NAME} library." SOFA_LIBRARY_SO_NAME "${PROJECT_NAME}" SOFA_LIBRARY_INCLUDE_FLAGS "")
+else()
+    sofa_generate_pkgconfig_file(SOFA_LIBRARY_NAME ${PROJECT_NAME} SOFA_LIBRARY_DESCRIPTION "The ${PROJECT_NAME} library." SOFA_LIBRARY_SO_NAME "${PROJECT_NAME}_d" SOFA_LIBRARY_INCLUDE_FLAGS "")
+endif()
+
 sofa_install_targets(SofaGeneral ${PROJECT_NAME} ${PROJECT_NAME})
