--- a/applications/plugins/SofaROSConnector/ZyROSConnectionManager/CMakeLists.txt
+++ b/applications/plugins/SofaROSConnector/ZyROSConnectionManager/CMakeLists.txt
@@ -39,6 +39,9 @@ include_directories(${CMAKE_SOURCE_DIR}/modules)
 
 # Dependencies
 include_directories(${CMAKE_SOURCE_DIR}/applications/plugins/SofaROSConnector/ZyROSConnector)
+include_directories(${CMAKE_SOURCE_DIR}/applications/plugins/SofaROSConnector)
+include_directories(${CMAKE_SOURCE_DIR}/SofaKernel/framework)
+include_directories(${CMAKE_BINARY_DIR}/include)
 
 # ROS (hydro)
 include_directories(${ROS_INCLUDE_DIR})
@@ -52,14 +55,22 @@ foreach(ROS_MSG_TYPE ${ROS_MSG_TYPES_LIST})
     message(STATUS "Message type: ${ROS_MSG_TYPE}")
 endforeach()
 
-list(APPEND HEADER_FILES     ${CMAKE_CURRENT_BINARY_DIR}/ZyROS_MessageType_Instantiations.h
+set(BINDING_HEADER_FILES     ${CMAKE_CURRENT_BINARY_DIR}/ZyROS_MessageType_Instantiations.h
                              ${CMAKE_CURRENT_BINARY_DIR}/ZyROS_ServiceType_Instantiations.h)
 
-list(APPEND SOURCE_FILES     ${CMAKE_CURRENT_BINARY_DIR}/ZyROS_MessageTypes_Instantiations.cpp
+set(BINDING_SOURCE_FILES     ${CMAKE_CURRENT_BINARY_DIR}/ZyROS_MessageTypes_Instantiations.cpp
                              ${CMAKE_CURRENT_BINARY_DIR}/ZyROS_ServiceTypes_Instantiations.cpp)
 
 add_definitions("-DSOFA_BUILD_ZY_ROS_CONNECTION_MANAGER")
 add_definitions(-DROS_BUILD_SHARED_LIBS)
+
+add_library(ZyROSConnectorBindings ${BINDING_HEADER_FILES} ${BINDING_SOURCE_FILES})
+target_compile_options(ZyROSConnectorBindings PRIVATE "-fpermissive")
+
+target_link_libraries(ZyROSConnectorBindings ${ROS_LIBRARY} ${ROS_CPP_LIBRARY} ${ROS_CPPCOMMON_LIBRARY} ${ROS_TIME_LIBRARY} ${ROS_CONSOLE_LIBRARY} ${ROS_CPP_SERIALIZATION_LIBRARY})
+
+target_link_libraries(ZyROSConnectorBindings ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SIGNALS_LIBRARY})
+target_link_libraries(ZyROSConnectorBindings ${LOG4CXX_LIBRARIES})
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
 
@@ -67,15 +78,16 @@ set_target_properties(${PROJECT_NAME} PROPERTIES FOLDER "Plugins")
 set_target_properties(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "_d")
 
 target_link_libraries(${PROJECT_NAME} SofaCore SofaHelper SofaDefaultType SofaBaseCollision SofaConstraint SofaSimulationCommon SofaMiscFem tinyxml newmat)
-target_link_libraries(${PROJECT_NAME} ZyROSConnector)
+target_link_libraries(${PROJECT_NAME} ZyROSConnector ZyROSConnectorBindings)
 target_link_libraries(${PROJECT_NAME} ${ROS_LIBRARY} ${ROS_CPP_LIBRARY} ${ROS_CPPCOMMON_LIBRARY} ${ROS_TIME_LIBRARY} ${ROS_CONSOLE_LIBRARY} ${ROS_CPP_SERIALIZATION_LIBRARY})
 
 target_link_libraries(${PROJECT_NAME} ${Boost_REGEX_LIBRARY} ${Boost_THREAD_LIBRARY} ${Boost_SIGNALS_LIBRARY})
 target_link_libraries(${PROJECT_NAME} ${LOG4CXX_LIBRARIES})
 
-#find_package(SofaTest QUIET)
-#if(SofaTest_FOUND)
-#    add_subdirectory(ZyROSConnector_test)
-#endif()
+find_package(SofaTest QUIET)
+if(SofaTest_FOUND)
+    add_subdirectory(ZyROSConnector_test)
+endif()
 
+sofa_create_package(ZyROSConnectorBindings "0.0.1" ZyROSConnectorBindings ZyROSConnectorBindings)
 sofa_create_package(${PROJECT_NAME} "0.0.1" ${PROJECT_NAME} ${PROJECT_NAME})
