--- a/modules/SofaUserInteraction/CMakeLists.txt
+++ b/modules/SofaUserInteraction/CMakeLists.txt
@@ -66,31 +66,30 @@ list(APPEND SOURCE_FILES
     SuturePointPerformer.cpp
     )
 
-<<<<<<< HEAD
 # if(SOFA_WITH_DEPRECATED_COMPONENTS)
-    list(APPEND HEADER_FILES
-        ArticulatedHierarchyBVHController.h
-        ArticulatedHierarchyController.h
-        DisabledContact.h
-        EdgeSetController.h
-        EdgeSetController.inl
-        GraspingManager.h
-        InterpolationController.h
-        InterpolationController.inl
-        MechanicalStateControllerOmni.h
-        MechanicalStateControllerOmni.inl
-        NodeToggleController.h
-        )
-    list(APPEND SOURCE_FILES
-        ArticulatedHierarchyBVHController.cpp
-        ArticulatedHierarchyController.cpp
-        DisabledContact.cpp
-        EdgeSetController.cpp
-        GraspingManager.cpp
-        InterpolationController.cpp
-        MechanicalStateControllerOmni.cpp
-        NodeToggleController.cpp
-        )
+#    list(APPEND HEADER_FILES
+#        # ArticulatedHierarchyBVHController.h
+#        # ArticulatedHierarchyController.h
+#        DisabledContact.h
+#        EdgeSetController.h
+#        EdgeSetController.inl
+#        GraspingManager.h
+#        InterpolationController.h
+#        InterpolationController.inl
+#        MechanicalStateControllerOmni.h
+#        MechanicalStateControllerOmni.inl
+#        NodeToggleController.h
+#        )
+#    list(APPEND SOURCE_FILES
+#        # ArticulatedHierarchyBVHController.cpp
+#        # ArticulatedHierarchyController.cpp
+#        DisabledContact.cpp
+#        EdgeSetController.cpp
+#        GraspingManager.cpp
+#        InterpolationController.cpp
+#        MechanicalStateControllerOmni.cpp
+#        NodeToggleController.cpp
+#        )
 # endif()
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
