Reviving collision detection code, continued.

--- a/applications/plugins/CMakeLists.txt
+++ b/applications/plugins/CMakeLists.txt
@@ -67,5 +67,7 @@ sofa_add_plugin(STLIB STLIB ON)
 sofa_add_plugin(SoftRobots SoftRobots ON)
 sofa_add_plugin(SofaROSConnector ZyROSConnector ON)
 
+sofa_add_plugin(ZyCollisionManager ZyCollisionManager ON)
+sofa_add_plugin(ZyPipeline ZyPipeline ON)
 sofa_add_plugin(ZyObbTreeGPU ZyObbTreeGPU ON)
 sofa_add_plugin(ZyBVHModels ZyBVHModels ON)
