Integration of open-source PBD dynamics framework from University of Aaachen.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "applications/plugins/SoftRobots"]
 	path = applications/plugins/SoftRobots
 	url = https://github.com/SofaDefrost/SoftRobots.git
+[submodule "applications/plugins/PDBSofaPlugin"]
+	path = applications/plugins/PDBSofaPlugin
+	url = https://github.com/AlbanOdot/PBDSofaPlugin
