--- a/applications/plugins/CMakeLists.txt
+++ b/applications/plugins/CMakeLists.txt
@@ -71,3 +71,8 @@ sofa_add_plugin(ZyCollisionManager ZyCollisionManager ON)
 sofa_add_plugin(ZyPipeline ZyPipeline ON)
 sofa_add_plugin(ZyObbTreeGPU ZyObbTreeGPU ON)
 sofa_add_plugin(ZyBVHModels ZyBVHModels ON)
+
+sofa_add_plugin(PDBSofaPlugin PDBSofaPlugin ON)
+
+sofa_add_plugin(ZyPBDDistanceBasedCollisionDetection ZyPBDDistanceBasedCollisionDetection ON)
+sofa_add_plugin(ZyPositionBasedDynamics ZyPositionBasedDynamics ON)
