--- a/applications/plugins/ZyPBDDistanceBasedCollisionDetection/CMakeLists.txt
+++ b/applications/plugins/ZyPBDDistanceBasedCollisionDetection/CMakeLists.txt
@@ -12,6 +12,13 @@ find_package(SofaFramework REQUIRED)
 ## Eigen
 find_package(Eigen3 REQUIRED)
 
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
+endif()
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
                     ${CMAKE_SOURCE_DIR}/applications/plugins/ZyPositionBasedDynamics)
 
@@ -38,6 +45,9 @@ set(SOURCE_FILES initZyPBDDistanceBasedCollisionDetectionPlugin.cpp
                  )
 
 add_library(${PROJECT_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} SofaCore)
+target_link_libraries(${PROJECT_NAME} SofaCore SofaSimulationCore
+    ZyPositionBasedDynamics_CommonUtils ZyPositionBasedDynamics_Models
+    ZyPositionBasedDynamics_Constraints ZyPositionBasedDynamics_Simulation
+    ZyPositionBasedDynamics_Dynamics)
 
 sofa_create_package(${PROJECT_NAME} ${ZY_POSITION_BASED_DYNAMICS_VERSION} ${PROJECT_NAME} ${PROJECT_NAME})
