Started drafting actual integration for PBD library and SOFA.

--- a/applications/plugins/ZyPositionBasedDynamics/CMakeLists.txt
+++ b/applications/plugins/ZyPositionBasedDynamics/CMakeLists.txt
@@ -64,10 +64,13 @@ set(MODELS_SOURCE_FILES
     PBDModels/PBDSimulationModel.cpp)
 
 set(CONSTRAINTS_HEADER_FILES
-    PBDConstraints/PBDConstraints.h)
+    PBDConstraints/PBDConstraintBase.h
+    PBDConstraints/PBDConstraints.h
+    PBDConstraints/PBDFixedConstraint.h)
 
 set(CONSTRAINTS_SOURCE_FILES
-    PBDConstraints/PBDConstraints.cpp)
+    PBDConstraints/PBDConstraints.cpp
+    PBDConstraints/PBDFixedConstraint.cpp)
 
 set(SIMULATION_HEADER_FILES
     PBDSimulation/PBDParticleData.h
